fix wrapping of login/register boxes

--- a/modules/users/login.css
+++ b/modules/users/login.css
@@ -1,4 +1,4 @@
-#login-wrap, #register-wrap { white-space:nowrap; }
+#login-register-wrap { white-space:nowrap; }
 #login-wrap p, #register-wrap p { white-space:normal; }
 #login-wrap .form-field, #register-wrap .form-field { margin-bottom:15px; }
 #login-wrap .form-field input, #register-wrap .form-field input { display:block; margin:2px; margin-left:0; font-size: 16px; padding: 5px; height:auto; line-height:initial; width: 285px; border: 1px solid #ccc; }
